2008-04-08  Bruno Haible  <bruno@clisp.org>

	Put the table of contents at the beginning, not at the end.
	* build-aux/texi2html (INLINE_CONTENTS): Set to 1.
	(THISVERSION): Append an 'a'.

	* build-aux/texi2html: New file, from texinfo-1.78.

2008-04-06  Bruno Haible  <bruno@clisp.org>

	Add support for checking with valgrind.
	* build-aux/run-test: New file.
	* Makefile.am (EXTRA_DIST): Add it.
	* tests/Makefile.am (CHECKER, CHECKER_END_OF_COMMENTS): New variables.
	(TESTS_ENVIRONMENT): Add a run-test invocation.
	* HACKING: Mention how to use valgrind.

2008-04-06  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (EXTRA_DIST): Add version.sh, DEPENDENCIES, HACKING,
	autogen.sh, build-aux/fixaclocal.
	* version.sh: New file.

2008-04-05  Bruno Haible  <bruno@clisp.org>

	Allow building as a shared library on AIX.
	* lib/Makefile.am (libunistring_la_LDFLAGS): Add -no-undefined flag
	and INTL_MACOSX_LIBS (for MacOS X).

2008-04-05  Bruno Haible  <bruno@clisp.org>

	Use libtool versioning.
	* lib/Makefile.am (LTV_CURRENT, LTV_REVISION, LTV_AGE): New variables.
	(libunistring_la_LDFLAGS): Pass -version-info option.

2008-04-05  Bruno Haible  <bruno@clisp.org>

	* gnulib-m4/gnulib-cache.m4: New file, generated by gnulib-tool.

	* autogen.sh: New file.
	* configure.ac: New file.
	* build-aux/fixaclocal: New file, from GNU gettext.
	* Makefile.am: New file.
	* lib/Makefile.am: New file.
	* tests/Makefile.am: New file.

2008-04-05  Bruno Haible  <bruno@clisp.org>

	* INSTALL: Renamed from INSTALL.generic. Add section about
	prerequisites,

2008-04-05  Bruno Haible  <bruno@clisp.org>

	* doc/*.texi: Add index entries.

2008-04-05  Bruno Haible  <bruno@clisp.org>

	* doc/unistr.texi (Elementary string functions): Document
	u{8,16,32}_cmp2.

2008-04-05  Bruno Haible  <bruno@clisp.org>

	* doc/libunistring.texi (func, posixfunc): New macros.
	Use them where appropriate.
	* doc/unistr.texi: Likewise.

2008-04-05  Bruno Haible  <bruno@clisp.org>
